--- a/YoutubeConfig.json
+++ b/YoutubeConfig.json
@@ -1,8 +1,8 @@
 {
 	"name": "Youtube",
 	"description": "One of the biggest video platforms owned by Google",
-	"author": "FUTO",
-	"authorUrl": "vila",
+	"author": "vila",
+	"authorUrl": "//",
 	"platformUrl": "https://youtube.com",
 	"sourceUrl": "https://plugins.grayjay.app/Youtube/YoutubeConfig.json",
 	"repositoryUrl": "https://gitlab.futo.org/videostreaming/plugins/youtube",
